crates/zenith/tests/snapshots/screens__session_list_capabilities__160x48__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys
       ∙        ·                                       *                                **        •               •       *
 •   ∙·                                                      ∙                    ·                                                         •


      ▄▄██████▄▄
    ▄████████████▄
   ▄████              SOLAR
   ████████████████   The central API of the Constellation
   ████████████████   NIPS-CERN
              ████▀   0.1.0
    ▀████████████▀
      ▀▀██████▀▀

   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5 APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every key.
 › /list
    ok   solar.manifest 1.0.0 · 0.90 ms · 0.17 ms in SOLAR · #3
   7 APIs · SOLAR 0.3.0 · solar/1 · manifest 2.1.0
   solar.cancel         1.0.0   Asks the call with this id to stop, and says what that did
   solar.describe       1.0.0   Describes one API, with its schemas and its examples
   solar.manifest       1.2.0   Returns the manifest of every API this build answers to
   solar.ping           1.0.0   Answers immediately, to prove SOLAR is there
   solar.set_log_level  1.0.0   Changes how much SOLAR says about itself, for the rest of the process
   solar.version        1.0.0   Reports the version, the protocol and the build metadata
   system.info          1.2.0   Reports the operating system, the processor and the process

   capabilities, as the manifest declares them
     batch
       accepted      true
       max_elements  64
       ordered       true
     cancellation
       accepted  true
       method    solar.cancel
     limits
       default_max_output_bytes  8388608
       max_abandoned_workers     64
       max_queued_bytes          67108864
       max_queued_requests       256
       max_request_bytes         16777216
       remembered_request_ids    1024
     notifications
       accepted  false
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.90 ms ─── in orbit 2s ────────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-152 #868482 on #F5F1E8
 0:153-153 #8C4907 on #F5F1E8 bold
 0:154-159 #555355 on #F5F1E8
 1:  7-7   #868482 on #F5F1E8
 1: 16-16  #868482 on #F5F1E8
 1: 56-56  #868482 on #F5F1E8
 1: 89-89  #555355 on #F5F1E8
 1: 90-90  #868482 on #F5F1E8
 1: 99-99  #868482 on #F5F1E8
 1:115-115 #555355 on #F5F1E8
 1:123-123 #868482 on #F5F1E8
 2:  1-1   #868482 on #F5F1E8
 2:  5-5   #868482 on #F5F1E8
 2:  6-6   #555355 on #F5F1E8
 2: 61-61  #555355 on #F5F1E8
 2: 82-82  #555355 on #F5F1E8
 2:140-140 #555355 on #F5F1E8
 5:  3-18  #B35A00 on #F5F1E8
 6:  3-18  #B35A00 on #F5F1E8
 7:  3-18  #B35A00 on #F5F1E8
 7: 22-26  #8C4907 on #F5F1E8 bold
 8:  3-18  #B35A00 on #F5F1E8
 9:  3-18  #B35A00 on #F5F1E8
 9: 22-30  #555355 on #F5F1E8
10:  3-18  #B35A00 on #F5F1E8
10: 22-26  #555355 on #F5F1E8
11:  3-18  #B35A00 on #F5F1E8
12:  3-18  #B35A00 on #F5F1E8
14:  3-3   #8C4907 on #F5F1E8
16:  0-7   #8C4907 on #F5F1E8
17:  3-6   #8C4907 on #F5F1E8 bold reversed
17:  9-22  #8C4907 on #F5F1E8
17: 23-28  #555355 on #F5F1E8
17: 39-62  #555355 on #F5F1E8
18:  0-49  #555355 on #F5F1E8
19:  3-21  #8C4907 on #F5F1E8
19: 24-31  #555355 on #F5F1E8
20:  3-21  #8C4907 on #F5F1E8
20: 24-31  #555355 on #F5F1E8
21:  3-21  #8C4907 on #F5F1E8
21: 24-31  #555355 on #F5F1E8
22:  3-21  #8C4907 on #F5F1E8
22: 24-31  #555355 on #F5F1E8
23:  3-21  #8C4907 on #F5F1E8
23: 24-31  #555355 on #F5F1E8
24:  3-21  #8C4907 on #F5F1E8
24: 24-31  #555355 on #F5F1E8
25:  3-21  #8C4907 on #F5F1E8
25: 24-31  #555355 on #F5F1E8
27:  0-45  #555355 on #F5F1E8
28:  5-9   #8C4907 on #F5F1E8
29:  7-18  #8C4907 on #F5F1E8
29: 21-24  #17161C on #F5F1E8 bold
30:  7-18  #8C4907 on #F5F1E8
30: 21-22  #17161C on #F5F1E8 bold
31:  7-18  #8C4907 on #F5F1E8
31: 21-24  #17161C on #F5F1E8 bold
32:  5-16  #8C4907 on #F5F1E8
33:  7-14  #8C4907 on #F5F1E8
33: 17-20  #17161C on #F5F1E8 bold
34:  7-14  #8C4907 on #F5F1E8
35:  5-10  #8C4907 on #F5F1E8
36:  7-30  #8C4907 on #F5F1E8
36: 33-39  #17161C on #F5F1E8 bold
37:  7-30  #8C4907 on #F5F1E8
37: 33-34  #17161C on #F5F1E8 bold
38:  7-30  #8C4907 on #F5F1E8
38: 33-40  #17161C on #F5F1E8 bold
39:  7-30  #8C4907 on #F5F1E8
39: 33-35  #17161C on #F5F1E8 bold
40:  7-30  #8C4907 on #F5F1E8
40: 33-40  #17161C on #F5F1E8 bold
41:  7-30  #8C4907 on #F5F1E8
41: 33-36  #17161C on #F5F1E8 bold
42:  5-17  #8C4907 on #F5F1E8
43:  7-14  #8C4907 on #F5F1E8
43: 17-21  #17161C on #F5F1E8 bold
44:  0-159 #868482 on #F5F1E8
45:  0-0   #868482 on #F5F1E8
45:  1-3   #8C4907 on #F5F1E8
45:  4-47  #555355 on #F5F1E8
45:159-159 #868482 on #F5F1E8
46:  0-159 #868482 on #F5F1E8
47:  0-2   #868482 on #F5F1E8
47:  3-3   #8C4907 on #F5F1E8
47:  4-6   #868482 on #F5F1E8
47:  7-17  #8C4907 on #F5F1E8 bold
47: 18-20  #555355 on #F5F1E8
47: 28-32  #868482 on #F5F1E8
47: 33-42  #555355 on #F5F1E8
47: 50-54  #868482 on #F5F1E8
47: 55-63  #555355 on #F5F1E8
47: 66-159 #868482 on #F5F1E8
