crates/zenith/tests/snapshots/screens__session_list_capabilities__160x48__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys




      ▄▄██████▄▄
    ▄████████████▄
   ▄████              SOLAR
   ████████████████   The central API of the Constellation
   ████████████████   NIPS-CERN
              ████▀   0.1.0
    ▀████████████▀
      ▀▀██████▀▀

   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5 APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every key.
 › /list
    ok   solar.manifest 1.0.0 · 0.90 ms · 0.17 ms in SOLAR · #3
   7 APIs · SOLAR 0.3.0 · solar/1 · manifest 2.1.0
   solar.cancel         1.0.0   Asks the call with this id to stop, and says what that did
   solar.describe       1.0.0   Describes one API, with its schemas and its examples
   solar.manifest       1.2.0   Returns the manifest of every API this build answers to
   solar.ping           1.0.0   Answers immediately, to prove SOLAR is there
   solar.set_log_level  1.0.0   Changes how much SOLAR says about itself, for the rest of the process
   solar.version        1.0.0   Reports the version, the protocol and the build metadata
   system.info          1.2.0   Reports the operating system, the processor and the process

   capabilities, as the manifest declares them
     batch
       accepted      true
       max_elements  64
       ordered       true
     cancellation
       accepted  true
       method    solar.cancel
     limits
       default_max_output_bytes  8388608
       max_abandoned_workers     64
       max_queued_bytes          67108864
       max_queued_requests       256
       max_request_bytes         16777216
       remembered_request_ids    1024
     notifications
       accepted  false
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.90 ms ─── in orbit 2s ────────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 21-26  #9C9A97 on #0B0C14
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-152 #646365 on #0B0C14
 0:153-153 #FFC23D on #0B0C14 bold
 0:154-159 #9C9A97 on #0B0C14
 5:  3-18  #FFC23D on #0B0C14
 6:  3-18  #FFC23D on #0B0C14
 7:  3-18  #FFC23D on #0B0C14
 7: 22-26  #FFC23D on #0B0C14 bold
 8:  3-18  #FFC23D on #0B0C14
 9:  3-18  #FFC23D on #0B0C14
 9: 22-30  #9C9A97 on #0B0C14
10:  3-18  #FFC23D on #0B0C14
10: 22-26  #9C9A97 on #0B0C14
11:  3-18  #FFC23D on #0B0C14
12:  3-18  #FFC23D on #0B0C14
14:  3-3   #FFC23D on #0B0C14
16:  0-7   #FFC23D on #0B0C14
17:  3-6   #FFC23D on #0B0C14 bold reversed
17:  9-22  #FFC23D on #0B0C14
17: 23-28  #9C9A97 on #0B0C14
17: 39-62  #9C9A97 on #0B0C14
18:  0-49  #9C9A97 on #0B0C14
19:  3-21  #FFC23D on #0B0C14
19: 24-31  #9C9A97 on #0B0C14
20:  3-21  #FFC23D on #0B0C14
20: 24-31  #9C9A97 on #0B0C14
21:  3-21  #FFC23D on #0B0C14
21: 24-31  #9C9A97 on #0B0C14
22:  3-21  #FFC23D on #0B0C14
22: 24-31  #9C9A97 on #0B0C14
23:  3-21  #FFC23D on #0B0C14
23: 24-31  #9C9A97 on #0B0C14
24:  3-21  #FFC23D on #0B0C14
24: 24-31  #9C9A97 on #0B0C14
25:  3-21  #FFC23D on #0B0C14
25: 24-31  #9C9A97 on #0B0C14
27:  0-45  #9C9A97 on #0B0C14
28:  5-9   #FFC23D on #0B0C14
29:  7-18  #FFC23D on #0B0C14
29: 21-24  #F5F1E8 on #0B0C14 bold
30:  7-18  #FFC23D on #0B0C14
30: 21-22  #F5F1E8 on #0B0C14 bold
31:  7-18  #FFC23D on #0B0C14
31: 21-24  #F5F1E8 on #0B0C14 bold
32:  5-16  #FFC23D on #0B0C14
33:  7-14  #FFC23D on #0B0C14
33: 17-20  #F5F1E8 on #0B0C14 bold
34:  7-14  #FFC23D on #0B0C14
35:  5-10  #FFC23D on #0B0C14
36:  7-30  #FFC23D on #0B0C14
36: 33-39  #F5F1E8 on #0B0C14 bold
37:  7-30  #FFC23D on #0B0C14
37: 33-34  #F5F1E8 on #0B0C14 bold
38:  7-30  #FFC23D on #0B0C14
38: 33-40  #F5F1E8 on #0B0C14 bold
39:  7-30  #FFC23D on #0B0C14
39: 33-35  #F5F1E8 on #0B0C14 bold
40:  7-30  #FFC23D on #0B0C14
40: 33-40  #F5F1E8 on #0B0C14 bold
41:  7-30  #FFC23D on #0B0C14
41: 33-36  #F5F1E8 on #0B0C14 bold
42:  5-17  #FFC23D on #0B0C14
43:  7-14  #FFC23D on #0B0C14
43: 17-21  #F5F1E8 on #0B0C14 bold
44:  0-159 #646365 on #0B0C14
45:  0-0   #646365 on #0B0C14
45:  1-3   #FFC23D on #0B0C14
45:  4-47  #9C9A97 on #0B0C14
45:159-159 #646365 on #0B0C14
46:  0-159 #646365 on #0B0C14
47:  0-2   #646365 on #0B0C14
47:  3-3   #FFC23D on #0B0C14
47:  4-6   #646365 on #0B0C14
47:  7-17  #FFC23D on #0B0C14 bold
47: 18-20  #9C9A97 on #0B0C14
47: 28-32  #646365 on #0B0C14
47: 33-42  #9C9A97 on #0B0C14
47: 50-54  #646365 on #0B0C14
47: 55-63  #9C9A97 on #0B0C14
47: 66-159 #646365 on #0B0C14
